--- a/composer.json
+++ b/composer.json
@@ -10,39 +10,37 @@
     "require": {
         "php": "^7.3|^8.0",
         "64robots/nova-fields": "^0.21.0",
-        "artesaos/seotools": "^0.20.1",
+        "artesaos/seotools": "^0.22.0",
         "benjacho/belongs-to-many-field": "^1.8",
         "bissolli/nova-phone-field": "^0.0.4",
         "dillingham/nova-attach-many": "^1.0",
         "dillingham/nova-items-field": "^0.6.0",
         "dkulyk/nova-tabs": "^1.0",
         "dmitrybubyakin/nova-medialibrary-field": "^3.2",
-        "ebess/advanced-nova-media-library": "^3.2",
+        "ebess/advanced-nova-media-library": "^3.6",
         "ebess/nova-collapsible-sidebar": "^0.1.2",
         "emilianotisato/nova-tinymce": "^1.2",
         "eminiarts/nova-tabs": "^1.4",
         "epartment/nova-dependency-container": "^1.3",
-        "fideloper/proxy": "^4.4",
         "google/recaptcha": "^1.2",
         "gregoriohc/laravel-nova-theme-responsive": "^0.8.1",
         "hisorange/browser-detect": "^4.3",
         "johnathan/nova-trumbowyg": "^1.0",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^9.0",
         "laravel/helpers": "^1.4",
         "laravel/nova": "*",
         "laravel/scout": "^9.2",
         "laravel/tinker": "^2.5",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "league/flysystem-cached-adapter": "^1.0",
+        "league/flysystem": "^3.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "maatwebsite/laravel-nova-excel": "^1.2",
-        "ofcold/nova-sortable": "^1.0",
-        "optimistdigital/nova-sortable": "^1.5",
+        "optimistdigital/nova-sortable": "^2.4.4",
         "orlyapps/nova-belongsto-depend": "^3.0",
-        "renatomarinho/laravel-page-speed": "^1.9",
+        "renatomarinho/laravel-page-speed": "^2.1",
         "slashweb/common-questions": "*",
         "slashweb/product-variants": "*",
-        "spatie/laravel-medialibrary": "^9.6",
-        "spatie/laravel-sitemap": "^5.8",
+        "spatie/laravel-medialibrary": "^10.3.0",
+        "spatie/laravel-sitemap": "^6.1",
         "tecnotanques/currency-field": "*",
         "tecnotanques/dashboard": "*",
         "tecnotanques/question-options": "*",
@@ -52,10 +50,9 @@
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
-        "facade/ignition": "^2.5",
-        "fzaninotto/faker": "^1.9.1",
+        "spatie/laravel-ignition": "^1.0",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3.3"
     },
     "config": {
